<resources>
<string name="app_name">Aide mémoire - Anglais</string>
<string name="CAT1"><b>Expressions courantes</b></string>
<string name="CAT1_content"><font size="18"><b>Expressions courantes</b></font>\n\n
<b>yes</b>\n   oui\n\n
<b>no</b>\n   non\n\n
<b>maybe ou perhaps</b>\n   peut-être\n\n
<b>please</b>\n   s\'il vous plaît\n\n
<b>thanks</b>\n   merci\n\n
<b>thank you</b>\n   merci\n\n
<b>thanks very much</b>\n   merci beaucoup\n\n
<b>thank you very much</b>\n   merci beaucoup\n\n
<b>you\'re welcome</b>\n   je vous en prie\n\n
<b>don\'t mention it</b>\n   je vous en prie\n\n
<b>not at all</b>\n   de rien\n\n
<b>hi</b>\n   salut\n\n
<b>hello</b>\n   bonjour\n\n
<b>good morning</b>\n   bonjour\n\n
<b>good afternoon</b>\n   bonjour\n\n
<b>good evening</b>\n   bonsoir\n\n
<b>bye</b>\n   au revoir\n\n
<b>goodbye</b>\n   au revoir\n\n
<b>goodnight</b>\n   bonne nuit\n\n
<b>see you!</b>\n   à plus!\n\n
<b>see you soon!</b>\n   à bientot!\n\n
<b>see you later!</b>\n   à plus tard!\n\n
<b>have a nice day!</b>\n   bonne journée!\n\n
<b>have a good weekend!</b>\n   bon weekend!\n\n
<b>excuse me</b>\n   excusez-moi\n\n
<b>sorry</b>\n   désolé(e), pardon\n\n
<b>no problem</b>\n   pas de souci\n\n
<b>it\'s OK ou that\'s OK</b>\n   ce n\'est pas grave, ce n\'est rien\n\n
<b>don\'t worry about it</b>\n   ce n\'est rien\n\n
</string>
<string name="CAT2"><b>Autres expressions courantes</b></string>
<string name="CAT2_content"><font size="18"><b>Autres expressions courantes</b></font>\n\n
<b>do you speak English?</b>\n   vous parlez anglais?\n\n
<b>I don\'t speak English</b>\n   je ne parle pas anglais\n\n
<b>I don\'t speak much English</b>\n   je ne parle pas très bien anglais\n\n
<b>I only speak very little English</b>\n   je parle juste un peu anglais\n\n
<b>I speak a little English</b>\n   je parle un peu anglais\n\n
<b>please speak more slowly</b>\n   pourriez-vous parler plus lentement, s\'il vous plaît?\n\n
<b>please write it down</b>\n   pourriez-vous me l\'écrire, s\'il vous plaît?\n\n
<b>could you please repeat that?</b>\n   pourriez-vous répéter cela, s\'il vous plaît?\n\n
<b>I understand</b>\n   je comprends\n\n
<b>I don\'t understand</b>\n   je ne comprends pas\n\n
<b>I know</b>\n   je sais\n\n
<b>I don\'t know</b>\n   je ne sais pas\n\n
<b>excuse me, where\'s the toilet?</b>\n   excusez-moi, où sont les toilettes?\n\n
<b>excuse me, where\'s the Gents?</b>\n   excusez-moi, où sont les toilettes pour hommes?\n\n
<b>excuse me, where\'s the Ladies?</b>\n   excusez-moi, où sont les toilettes pour dames?\n\n
<b>Entrance</b>\n   Entrée\n\n
<b>Exit</b>\n   Sortie\n\n
<b>Emergency exit</b>\n   Sortie de secours\n\n
<b>Push</b>\n   Poussez\n\n
<b>Pull</b>\n   Tirez\n\n
<b>Toilets</b>\n   Toilettes\n\n
<b>Gentlemen (ou Gents)</b>\n   Hommes\n\n
<b>Ladies</b>\n   Dames\n\n
<b>Vacant</b>\n   Libre\n\n
<b>Occupied ou Engaged</b>\n   Occupé\n\n
<b>Out of order</b>\n   Hors service\n\n
<b>No smoking</b>\n   Défense de fumer\n\n
<b>Private</b>\n   Privé\n\n
<b>No entry</b>\n   Entrée interdite\n\n
</string>
<string name="CAT3"><b>Autres expressions utiles</b></string>
<string name="CAT3_content"><font size="18"><b>Autres expressions utiles</b></font>\n\n
<b>OK</b>\n   OK\n\n
<b>of course</b>\n   bien sûr\n\n
<b>of course not</b>\n   bien sûr que non\n\n
<b>that\'s fine</b>\n   c\'est bon\n\n
<b>that\'s right</b>\n   c\'est vrai\n\n
<b>sure</b>\n   bien sûr\n\n
<b>certainly</b>\n   certainement, sans doute\n\n
<b>definitely</b>\n   absolument, certainement\n\n
<b>absolutely</b>\n   absolument\n\n
<b>as soon as possible</b>\n   le plus tôt possible\n\n
<b>that\'s enough</b>\n   ça suffit\n\n
<b>it doesn\'t matter</b>\n   cela n\'a pas d\'importance\n\n
<b>it\'s not important</b>\n   peu importe\n\n
<b>it\'s not serious</b>\n   ce n\'est pas grave\n\n
<b>it\'s not worth it</b>\n   cela n\'en vaut pas le coup\n\n
<b>I\'m in a hurry</b>\n   je suis pressé(e)\n\n
<b>I\'ve got to go</b>\n   je dois partir\n\n
<b>I\'m going out</b>\n   je vais sortir\n\n
<b>sleep well</b>\n   dors bien\n\n
<b>same to you!</b>\n   toi aussi!\n\n
<b>me too</b>\n   moi aussi\n\n
<b>not bad</b>\n   pas mal\n\n
<b>I like him</b>\n   je l\'aime bien (homme)\n\n
<b>I like her</b>\n   je l\'aime bien (femme)\n\n
<b>I like it</b>\n   je l\'aime bien (objet)\n\n
<b>I don\'t like him</b>\n   je ne l\'aime pas (homme)\n\n
<b>I don\'t like her</b>\n   je ne l\'aime pas (femme)\n\n
<b>I don\'t like it</b>\n   je ne l\'aime pas (objet)\n\n
<b>thanks for your help</b>\n   merci pour ton aide\n\n
<b>thanks for everything</b>\n   merci pour tout\n\n
<b>I\'m sorry</b>\n   je suis désolé(e)\n\n
<b>I\'m really sorry</b>\n   je suis vraiment désolé\n\n
<b>sorry I\'m late</b>\n   désolé(e) d\'être en retard\n\n
<b>sorry to keep you waiting</b>\n   désolé de t\'avoir fait attendre\n\n
<b>sorry for the delay</b>\n   désolé(e) pour le retard\n\n
<b>look!</b>\n   regarde!\n\n
<b>great!</b>\n   super!\n\n
<b>come on!</b>\n   allons!\n\n
<b>only joking!</b>\n   je plaisantais\n\n
<b>bless you!</b>\n   à tes souhaits!\n\n
<b>that\'s funny!</b>\n   c\'est amusant!\n\n
<b>come in!</b>\n   entrez!\n\n
<b>please sit down</b>\n   asseyez-vous, s\'il vous plaît\n\n
<b>could I have your attention, please?</b>\n   votre attention, s\'il vous plaît\n\n
<b>let\'s go!</b>\n   on y va!\n\n
<b>hurry up!</b>\n   dépêchez-vous!\n\n
<b>get a move on!</b>\n   dépêchez-vous!\n\n
<b>calm down</b>\n   calmez-vous\n\n
<b>steady on!</b>\n   faites attention!\n\n
<b>hang on a second</b>\n   attendez une seconde\n\n
<b>hang on a minute</b>\n   attendez une minute\n\n
<b>one moment, please</b>\n   un instant, s\'il vous plaît\n\n
<b>just a minute</b>\n   une minute\n\n
<b>take your time</b>\n   prenez votre temps\n\n
<b>please be quiet</b>\n   moins de bruit, s\'il vous plaît\n\n
<b>stop it!</b>\n   arrêtez!\n\n
<b>don\'t worry</b>\n   ne vous inquiétez pas\n\n
<b>don\'t forget</b>\n   n\'oubliez pas\n\n
<b>help yourself</b>\n   servez-vous\n\n
<b>go ahead</b>\n   allez-y\n\n
<b>let me know!</b>\n   faites-moi connaître votre réponse!\n\n
<b>after you!</b>\n   après vous!\n\n
<b>here</b>\n   ici\n\n
<b>there</b>\n   là\n\n
<b>everywhere</b>\n   partout\n\n
<b>nowhere</b>\n   nulle part\n\n
<b>somewhere</b>\n   quelque part\n\n
</string>
<string name="CAT4"><b>Questions courantes</b></string>
<string name="CAT4_content"><font size="18"><b>Questions courantes</b></font>\n\n
<b>where are you?</b>\n   où es-tu?, où êtes-vous?\n\n
<b>what\'s this?</b>\n   qu\'est-ce que c\'est? (à proximité)\n\n
<b>what\'s that?</b>\n   qu\'est-ce que c\'est? (qui n\'est pas à proximité)\n\n
<b>is anything wrong?</b>\n   ça ne va pas?\n\n
<b>what\'s the matter?</b>\n   qu\'est-ce qui ne va pas?\n\n
<b>is everything OK?</b>\n   est-ce que tout va bien?\n\n
<b>have you got a minute?</b>\n   tu as une minute?\n\n
<b>have you got a pen I could borrow?</b>\n   puis-je emprunter ton stylo?\n\n
<b>really?</b>\n   vraiment?\n\n
<b>are you sure?</b>\n   tu es sûr(e)?\n\n
<b>why?</b>\n   pourquoi?\n\n
<b>why not?</b>\n   pourquoi pas?\n\n
<b>what\'s going on?</b>\n   qu\'est-ce qui se passe?\n\n
<b>what\'s happening?</b>\n   qu\'est-ce qui se passe?\n\n
<b>what happened?</b>\n   qu\'est-ce qui s\'est passé?\n\n
<b>what?</b>\n   quoi?/comment?\n\n
<b>where?</b>\n   où?\n\n
<b>when?</b>\n   quand?\n\n
<b>who?</b>\n   qui?\n\n
<b>how?</b>\n   comment?\n\n
<b>how many?</b>\n   combien?\n\n
<b>how much?</b>\n   combien?\n\n
<b>congratulations!</b>\n   félicitations!\n\n
<b>well done!</b>\n   bravo!\n\n
<b>good luck!</b>\n   bonne chance!\n\n
<b>bad luck!</b>\n   pas de chance!\n\n
<b>never mind!</b>\n   tant pis!\n\n
<b>what a pity! ou what a shame!</b>\n   quel dommage!\n\n
<b>happy birthday!</b>\n   joyeux anniversaire!\n\n
<b>glad to hear it</b>\n   content(e) de l\'apprendre\n\n
<b>sorry to hear that</b>\n   désolé(e) de l\'apprendre\n\n
<b>I\'m tired</b>\n   je suis fatigué(e)\n\n
<b>I\'m hungry</b>\n   j\'ai faim\n\n
<b>I\'m thirsty</b>\n   j\'ai soif\n\n
<b>I\'m bored</b>\n   je m\'ennuie\n\n
<b>I\'m worried</b>\n   je suis inquiet/inquiète\n\n
<b>I\'m looking forward to it</b>\n   j\'attends cela avec impatience\n\n
<b>I\'m in a good mood</b>\n   je suis de bonne humeur\n\n
<b>I\'m in a bad mood</b>\n   je suis de mauvaise humeur\n\n
<b>welcome!</b>\n   bienvenue!\n\n
<b>welcome to &#8230;</b>\n   bienvenue &#8230;\n\n
<b>long time, no see!</b>\n   il y a longtemps que je ne vous ai pas vu(e)\n\n
<b>all the best!</b>\n   porte-toi bien!\n\n
<b>see you tomorrow!</b>\n   à demain!\n\n
<b>what do you think?</b>\n   qu\'est-ce que tu en penses?\n\n
<b>I think that &#8230;</b>\n   je pense que &#8230;\n\n
<b>I hope that &#8230;</b>\n   j\'espère que &#8230;\n\n
<b>I\'m afraid that &#8230;</b>\n   je crains que &#8230;\n\n
<b>in my opinion, &#8230;</b>\n   à mon avis, &#8230;\n\n
<b>I agree</b>\n   je suis d\'accord\n\n
<b>I disagree ou I don\'t agree</b>\n   je ne suis pas d\'accord\n\n
<b>that\'s true</b>\n   c\'est vrai\n\n
<b>that\'s not true</b>\n   ce n\'est pas vrai\n\n
<b>I think so</b>\n   je pense que oui\n\n
<b>I don\'t think so</b>\n   je ne pense pas\n\n
<b>I hope so</b>\n   j\'espère que oui, j\'espère bien\n\n
<b>I hope not</b>\n   j\'espère que non\n\n
<b>you\'re right</b>\n   tu as raison\n\n
<b>you\'re wrong</b>\n   tu as tort\n\n
<b>I don\'t mind</b>\n   ça ne me dérange pas\n\n
<b>it\'s up to you</b>\n   comme tu veux\n\n
<b>that depends</b>\n   ça dépend\n\n
<b>that\'s interesting</b>\n   c\'est intéressant\n\n
<b>that\'s funny, &#8230;</b>\n   c\'est curieux, &#8230;\n\n
</string>
<string name="CAT5"><b>Urgences</b></string>
<string name="CAT6"><b>Conversation générale</b></string>
<string name="CAT7"><b>Faire connaissance</b></string>
<string name="CAT8"><b>Conversation complémentaire</b></string>
<string name="CAT9"><b>Temps</b></string>
<string name="CAT10"><b>L\'Heure</b></string>
<string name="CAT11"><b>Dates</b></string>
<string name="CAT12"><b>Température</b></string>
<string name="CAT13"><b>Voyager</b></string>
<string name="CAT14"><b>Direction</b></string>
<string name="CAT15"><b>Taxi</b></string>
<string name="CAT16"><b>Bus, Train, Metro</b></string>
<string name="CAT17"><b>En avion</b></string>
<string name="CAT18"><b>Douanes</b></string>
<string name="CAT19"><b>Réservation d\'hôtel</b></string>
<string name="CAT20"><b>À l\'hôtel</b></string>
<string name="CAT21"><b>Séjour à l\'hôtel</b></string>
<string name="CAT22"><b>Départ de l\'hôtel</b></string>
<string name="CAT23"><b>Pub, café</b></string>
<string name="CAT24"><b>Restaurant</b></string>
<string name="CAT25"><b>Magasin</b></string>
<string name="CAT26"><b>À la banque</b></string>
<string name="CAT27"><b>La santé</b></string>
<string name="CAT28"><b>À la pharmacie</b></string>
<string name="CAT29"><b>Chez le médecin</b></string>
<string name="CAT30"><b>Dentiste</b></string>
<string name="CAT31"><b>Téléphoner</b></string>
</resources>