<menu xmlns:android="http://schemas.android.com/apk/res/android" >

      <item 	android:id="@+id/menu_cat1"                  
            android:title="@string/CAT1" />  
     <item 	android:id="@+id/menu_cat2"                  
            android:title="@string/CAT2" />  
     <item 	android:id="@+id/menu_cat3"                  
            android:title="@string/CAT3" />  
     <item 	android:id="@+id/menu_cat4"                  
            android:title="@string/CAT4" />  
     <item 	android:id="@+id/menu_cat5"                  
            android:title="@string/CAT5" />  
     <item 	android:id="@+id/menu_cat6"                  
            android:title="@string/CAT6" />  
     <item 	android:id="@+id/menu_cat7"                  
            android:title="@string/CAT7" />  
     <item 	android:id="@+id/menu_cat8"                  
            android:title="@string/CAT8" />  
     <item 	android:id="@+id/menu_cat9"                  
            android:title="@string/CAT9" />  
     <item 	android:id="@+id/menu_cat10"                  
            android:title="@string/CAT10" />  
     <item 	android:id="@+id/menu_cat11"                  
            android:title="@string/CAT11" />  
     <item 	android:id="@+id/menu_cat12"                  
            android:title="@string/CAT12" />  
     <item 	android:id="@+id/menu_cat13"                  
            android:title="@string/CAT13" />  
     <item 	android:id="@+id/menu_cat14"                  
            android:title="@string/CAT14" />  
     <item 	android:id="@+id/menu_cat15"                  
            android:title="@string/CAT15" />  
     <item 	android:id="@+id/menu_cat16"                  
            android:title="@string/CAT16" />  
     <item 	android:id="@+id/menu_cat17"                  
            android:title="@string/CAT17" />  
     <item 	android:id="@+id/menu_cat18"                  
            android:title="@string/CAT18" />  
     <item 	android:id="@+id/menu_cat19"                  
            android:title="@string/CAT19" />  
     <item 	android:id="@+id/menu_cat20"                  
            android:title="@string/CAT20" />  
     <item 	android:id="@+id/menu_cat21"                  
            android:title="@string/CAT21" />  
     <item 	android:id="@+id/menu_cat22"                  
            android:title="@string/CAT22" />  
     <item 	android:id="@+id/menu_cat23"                  
            android:title="@string/CAT23" />  
     <item 	android:id="@+id/menu_cat24"                  
            android:title="@string/CAT24" />  
     <item 	android:id="@+id/menu_cat25"                  
            android:title="@string/CAT25" />  
     <item 	android:id="@+id/menu_cat26"                  
            android:title="@string/CAT26" />  
     <item 	android:id="@+id/menu_cat27"                  
            android:title="@string/CAT27" />  
     <item 	android:id="@+id/menu_cat28"                  
            android:title="@string/CAT28" />  
     <item 	android:id="@+id/menu_cat29"                  
            android:title="@string/CAT29" />  
     <item 	android:id="@+id/menu_cat30"                  
            android:title="@string/CAT30" />  
     <item 	android:id="@+id/menu_cat31"                  
            android:title="@string/CAT31" />  

</menu>
